<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DVR</string>
    <string name="settings">settings</string>

    <string name="video_quality">video quality</string>
    <string name="video_quality_480p">480P</string>
    <string name="video_quality_720p">720P</string>
    <string name="video_quality_1080p">1080P</string>
    <string name="video_duration">video duration</string>
    <string name="video_duration_1min">1min</string>
    <string name="video_duration_2min">2min</string>
    <string name="video_duration_5min">5min</string>

    <string name="poweron_recording">power on recording</string>
    <string name="time_watermark">time watermark</string>
    <string name="camera_flip">camera flip</string>

    <string name="impact_detect_level">impact detect level</string>
    <string name="impact_leve_1">High</string>
    <string name="impact_leve_2">Normal</string>
    <string name="impact_leve_3">Low</string>
    <string name="impact_leve_c">Close</string>

    <string name="distance_detect_level">car distance detect level</string>
    <string name="distance_leve_1">"High  (>35KM/H)"</string>
    <string name="distance_leve_2">"Normal(>60KM/H)"</string>
    <string name="distance_leve_3">"Low   (>80KM/H)"</string>
    <string name="distance_leve_c">"Close"</string>

    <string name="format_sd_title">format sdcard</string>
    <string name="format_sd_message">format sdcard or not ?</string>
    <string name="restore_settings">restore settings</string>
    <string name="restore_ornot">restore settings or not ?</string>

    <string name="ok">ok</string>
    <string name="cancel">cancel</string>

    <string name="browse_dvr_file">DVR Files</string>

    <string-array name="category_one_camera">
        <item>Normal Video</item>
        <item>Locked Video</item>
        <item>Photo</item>
    </string-array>

    <string-array name="category_two_camera">
        <item>Normal VideoA</item>
        <item>Locked VideoA</item>
        <item>PhotoA</item>
        <item>Normal VideoB</item>
        <item>Locked VideoB</item>
        <item>PhotoB</item>
    </string-array>

    <string name="multi_select">Multi Selection</string>
    <string name="open">Open</string>
    <string name="play">Play</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="delete">Delete</string>

    <string name="btn_select_all">Select All</string>
    <string name="btn_lock">Lock</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>

    <string name="notice">Notice</string>
    <string name="please_wait">Please wait ...</string>
</resources>
