<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_settings_title_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text_white"
            android:background="@drawable/top_bar"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bar"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/settings_dialog_bg"
        android:scrollbarThumbHorizontal="@drawable/scroll_bar"
        android:splitMotionEvents="false"
        android:scrollbarSize="24dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_group_margin"
                />

            <!-- 1 -->
            <LinearLayout
                android:id="@+id/video_quality"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_quality"
                    android:layout_gravity="left|center"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/settings_option_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <TextView
                    android:id="@+id/video_quality_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_quality_720p"
                    android:layout_gravity="right|center"
                    android:layout_margin="@dimen/settings_option_margin"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_next"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/parting_line"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:background="@color/parting_line_dark"
                />

            <LinearLayout
                android:id="@+id/video_duration"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_duration"
                    android:layout_gravity="left|center"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/settings_option_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <TextView
                    android:id="@+id/video_duration_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_duration_1min"
                    android:layout_gravity="right|center"
                    android:layout_margin="@dimen/settings_option_margin"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_next"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_group_margin"
                />

            <LinearLayout
                android:id="@+id/poweron_recording"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poweron_recording"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/settings_option_margin"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:id="@+id/poweron_recording_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_option"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/parting_line"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:background="@color/parting_line_dark"
                />

            <LinearLayout
                android:id="@+id/time_watermark"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_watermark"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/settings_option_margin"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:id="@+id/watermark_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_option"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/parting_line"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:background="@color/parting_line_dark"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/flip"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_flip"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/settings_option_margin"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:id="@+id/flip_switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_option"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/parting_line"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:background="@color/parting_line_dark"
                />

            <LinearLayout
                android:id="@+id/impact_detect_level"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/impact_detect_level"
                    android:layout_weight="1"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/settings_inner_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <TextView
                    android:id="@+id/impact_detect_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/impact_leve_1"
                    android:layout_gravity="right|center"
                    android:layout_margin="@dimen/settings_option_margin"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_next"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/parting_line"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:background="@color/parting_line_dark"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/distance_detect_level"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_detect_level"
                    android:layout_weight="1"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/settings_inner_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <TextView
                    android:id="@+id/distance_detect_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_leve_1"
                    android:layout_gravity="right|center"
                    android:layout_margin="@dimen/settings_option_margin"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_next"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_group_margin"
                />

            <LinearLayout
                android:id="@+id/format_sd"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/format_sd_title"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/settings_option_margin"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_next"
                    />
             </LinearLayout>

             <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/parting_line"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:background="@color/parting_line_dark"
                />

             <LinearLayout
                android:id="@+id/restore"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginRight="@dimen/settings_option_margin"
                android:layout_marginLeft="@dimen/settings_option_margin"
                android:orientation="horizontal"
                android:background="@drawable/option"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restore_settings"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/settings_option_margin"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/text_gray"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/settings_inner_margin"
                    android:src="@drawable/btn_settings_next"
                    />
             </LinearLayout>

             <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_group_margin"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
